--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ author :
   name : chensong
   email : dutchensong@gmail.com
   github : dutchensong
-  weibo : @Captain陈松
-  feedburner : 
+  weibo : chensongxyz
+  feedburner : insert 
 
 # The production_url is only used when full-domain names are needed
 # such as sitemap.txt 
