--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : chensongblog
     livefyre :
       site_id : 123
     intensedebate :
